@@ -1,4 +1,4 @@
-/* $Id: tif_dirread.c,v 1.134 2007-09-29 10:34:38 joris Exp $ */
+/* $Id: tif_dirread.c,v 1.135 2007-10-24 10:20:23 joris Exp $ */
 
 /*
  * Copyright (c) 1988-1997 Sam Leffler
@@ -3868,8 +3868,10 @@ TIFFReadDirectory(TIFF* tif)
 	 * side effect, however, is that the RowsPerStrip tag
 	 * value may be changed.
 	 */
-	if (tif->tif_dir.td_nstrips == 1 && tif->tif_dir.td_compression == COMPRESSION_NONE &&  
-	    (tif->tif_flags & (TIFF_STRIPCHOP|TIFF_ISTILED)) == TIFF_STRIPCHOP)
+	if ((tif->tif_dir.td_planarconfig==PLANARCONFIG_CONTIG)&&
+	    (tif->tif_dir.td_nstrips==1)&&
+	    (tif->tif_dir.td_compression==COMPRESSION_NONE)&&  
+	    ((tif->tif_flags&(TIFF_STRIPCHOP|TIFF_ISTILED))==TIFF_STRIPCHOP))
 		ChopUpSingleUncompressedStrip(tif);
 
 	/*
